fix: create limit variables

--- a/helm/angularportfoliomgr/templates/kubTemplate.yaml
+++ b/helm/angularportfoliomgr/templates/kubTemplate.yaml
@@ -286,11 +286,11 @@ spec:
   triggers:
     - type: metrics-api
       metadata:
-        targetValue: "10"        
+        targetValue: {{ .Values.kedaRequestLimit }}        
         url: "http://{{ .Values.webAppName }}:8080/actuator/metrics/http.server.requests.active"
         valueLocation: "measurements.0.value"
     - type: cpu
       metricType: Utilization # Allowed types are 'Utilization' or 'AverageValue'
       metadata:
         type: Utilization # Deprecated in favor of trigger.metricType; allowed types are 'Utilization' or 'AverageValue'
-        value: "60"        
+        value: {{ .Values.kedaCpuLimit }}
