--- a/helm/angularportfoliomgr/values.yaml
+++ b/helm/angularportfoliomgr/values.yaml
@@ -20,8 +20,8 @@ zookeeperImageVersion: latest
 kafkaServiceName: kafkaservice
 zookeeperServiceName: zookeeperservice
 
-kedaCpuLimit: "60"
-kedaRequestLimit: "10"
+kedaCpuLimit: 60
+kedaRequestLimit: 10
 
 secret:
   nameApp: app-env-secret
