--- a/helm/angularportfoliomgr/templates/kubTemplate.yaml
+++ b/helm/angularportfoliomgr/templates/kubTemplate.yaml
@@ -292,7 +292,7 @@ spec:
         url: "http://{{ .Values.webServiceName }}.default.svc.cluster.local:8080/actuator/metrics/http.server.requests.active"
         valueLocation: "measurements.0.value"
     - type: cpu
-      metricType: AverageValue # Allowed types are 'Utilization' or 'AverageValue'
+      metricType: Utilization # Allowed types are 'Utilization' or 'AverageValue'
       metadata:        
         value: "{{ .Values.kedaCpuLimit }}"
 ---
