feat: add properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,6 +12,7 @@ server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javasc
 server.compression.min-response-size=2KB
 spring.codec.max-in-memory-size=2MB
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.parser.allow-backslash-escaping-any-character=true
 server.servlet.session.timeout=30s
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=${SHUTDOWN_PHASE:3s}
