--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -35,7 +35,7 @@
     "@angular/router": "^16.0.0",
     "material-icons": "^1.11.11",
     "luxon": "^3.2.1",
-    "ngx-simple-charts": "^16.0.0",
+    "ngx-simple-charts": "^16.1.0-beta1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.13.0"
@@ -56,7 +56,6 @@
     "@types/node": "^14.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
-    "cpy-cli": "^4.2.0",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
