--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -56,6 +56,7 @@
     "@types/node": "^14.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "cpy-cli": "^4.2.0",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
