--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -33,9 +33,9 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "material-icons": "^1.11.11",
     "luxon": "^3.2.1",
-    "ngx-simple-charts": "^16.1.0-beta1",
+    "material-icons": "^1.11.11",
+    "ngx-simple-charts": "^16.1.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.13.0"
@@ -69,7 +69,7 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-junit-reporter": "~2.0.0",
     "mkdirp": "^1.0.4",
-    "npm-run-all": "^4.1.5",    
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
