--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
 	implementation 'net.javacrumbs.shedlock:shedlock-spring:4.42.0'
 	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:4.42.0'
+	implementation 'com.google.crypto.tink:tink:1.9.0'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
