--- a/helm/angularportfoliomgr/values.yaml
+++ b/helm/angularportfoliomgr/values.yaml
@@ -70,4 +70,5 @@ envApp:
     POSTGRES_URL: "jdbc:postgresql://postgresservice:5432/portfolio"
     APIKEY: replacewithAlphavatageApiKey
     APIKEY_RAPIDAPI: replacewithrapidApiKey
-    FINANCIAL_DATA_PATH: "/tmp/"
+    FINANCIAL_DATA_PATH: "/tmp/"    
+    TINK_JSON_KEY: '{"primaryKeyId":1047384356,"key":[{"keyData":{"typeUrl":"type.googleapis.com/google.crypto.tink.AesSivKey","value":"EkBtsrB3Aomkmsiq16f9KJQXZX2Y2ZfK3bN1QBBQuxGpSb/5pqQPgqXc5D5FETW6rrBsCv7qIsPyzoEAS2rXPgLx","keyMaterialType":"SYMMETRIC"},"status":"ENABLED","keyId":1047384356,"outputPrefixType":"TINK"}]}'
