--- a/helm/angularportfoliomgr/values.yaml
+++ b/helm/angularportfoliomgr/values.yaml
@@ -42,6 +42,7 @@ envKafka:
     KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
     KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://:9092
     ALLOW_PLAINTEXT_LISTENER: yes
+    KAFKA_ENABLE_KRAFT: false
   secret:
     KAFKA_ZOOKEEPER_CONNECT: "zookeeperservice:2181"  
     
