--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -21,40 +21,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/localize": "^16.0.0",
-    "@angular/material": "^16.0.0",
-    "@angular/material-luxon-adapter": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "^17.0.3",
+    "@angular/cdk": "^17.0.0",
+    "@angular/common": "^17.0.3",
+    "@angular/compiler": "^17.0.3",
+    "@angular/core": "^17.0.3",
+    "@angular/forms": "^17.0.3",
+    "@angular/localize": "^17.0.3",
+    "@angular/material": "^17.0.0",
+    "@angular/material-luxon-adapter": "^17.0.0",
+    "@angular/platform-browser": "^17.0.3",
+    "@angular/platform-browser-dynamic": "^17.0.3",
+    "@angular/router": "^17.0.3",
     "luxon": "^3.2.1",
     "material-icons": "^1.11.11",
-    "ngx-simple-charts": "^16.1.1",
+    "ngx-simple-charts": "^17.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",    
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular/language-service": "^16.0.0",
+    "@angular-devkit/build-angular": "^17.0.1",
+    "@angular/cli": "^17.0.1",
+    "@angular/compiler-cli": "^17.0.3",
+    "@angular/language-service": "^17.0.3",
+    "@angular-eslint/builder": "^17.0.0",
+    "@angular-eslint/eslint-plugin": "^17.0.0",
+    "@angular-eslint/eslint-plugin-template": "^17.0.0",
+    "@angular-eslint/schematics": "^17.0.0",
+    "@angular-eslint/template-parser": "^17.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/luxon": "^2.0.0",
     "@types/node": "^14.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "cpy-cli": "^4.2.0",
-    "eslint": "^7.26.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint": "^8.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsdoc": "46.7.0",
     "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.16",
@@ -65,11 +70,11 @@
     "karma-junit-reporter": "~2.0.0",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1",
+    "prettier": "^3.0.0",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "~10.4.0",
-    "typescript": "~5.0.4",
+    "typescript": "~5.2.2",
     "webpack-bundle-analyzer": "^4.5.0"
   }
 }
