--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -11,9 +11,9 @@
    limitations under the License.
  */
 plugins {
-	id 'org.springframework.boot' version '3.1.4'
-	id 'io.spring.dependency-management' version '1.1.3'
-	id 'org.graalvm.buildtools.native' version '0.9.27'
+	id 'org.springframework.boot' version '3.2.0'
+	id 'io.spring.dependency-management' version '1.1.4'
+//	id 'org.graalvm.buildtools.native' version '0.9.28'
 	id 'java'    
 }
 
@@ -37,21 +37,21 @@ dependencies {
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'com.google.guava:guava:31.1-jre'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.13'
-	implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.13'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+	implementation 'org.springdoc:springdoc-openapi-data-rest:1.7.0'
 	implementation 'commons-net:commons-net:3.8.0'	
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
-	implementation 'net.javacrumbs.shedlock:shedlock-spring:4.42.0'
-	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:4.42.0'
-	implementation 'com.google.crypto.tink:tink:1.9.0'
+	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.10.0'
+	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.10.0'
+	implementation 'com.google.crypto.tink:tink:1.11.0'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'io.projectreactor:reactor-test'
-	testImplementation group: 'com.tngtech.archunit', name: 'archunit-junit5', version: '1.1.0'
+	testImplementation group: 'com.tngtech.archunit', name: 'archunit-junit5', version: '1.2.0'
 			
 	if(project.hasProperty('withAngular')) {
 		implementation 'org.postgresql:postgresql'
