feat: use Spring Aot on Jvm

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -11,9 +11,9 @@
    limitations under the License.
  */
 plugins {
-	id 'org.springframework.boot' version '3.2.0'
+	id 'org.springframework.boot' version '3.2.2'
 	id 'io.spring.dependency-management' version '1.1.4'
-//	id 'org.graalvm.buildtools.native' version '0.9.28'
+	id 'org.graalvm.buildtools.native' version '0.10.0'
 	id 'java'    
 }
 
