--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -16,6 +16,7 @@
  
 group = 'ch.xxx'
 version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '21'
 
 task cleanAngular {
 	if(project.hasProperty('withAngular')) {	
