--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -45,11 +45,11 @@
     "@angular/cli": "^17.0.1",
     "@angular/compiler-cli": "^17.0.0",
     "@angular/language-service": "^17.0.0",
-    "@angular-eslint/builder": "^17.0.0",
-    "@angular-eslint/eslint-plugin": "^17.0.0",
-    "@angular-eslint/eslint-plugin-template": "^17.0.0",
-    "@angular-eslint/schematics": "^17.0.0",
-    "@angular-eslint/template-parser": "^17.0.0",
+    "@angular-eslint/builder": "^18.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin": "^18.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin-template": "^18.0.0-alpha.1",
+    "@angular-eslint/schematics": "^18.0.0-alpha.1",
+    "@angular-eslint/template-parser": "^18.0.0-alpha.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/luxon": "^2.0.0",
