feat: angular 18 update

--- a/frontend/src/angular/angular.json
+++ b/frontend/src/angular/angular.json
@@ -24,12 +24,15 @@
       },
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/manager",
+            "outputPath": {
+              "base": "dist/manager"
+            },
             "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "src/polyfills.ts"
+            ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
@@ -40,13 +43,12 @@
               "src/styles.scss"
             ],
             "scripts": [],
-            "vendorChunk": true,
             "extractLicenses": false,
-            "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
             "namedChunks": true,
-     		"preserveSymlinks": true
+        "preserveSymlinks": true,
+        "browser": "src/main.ts"
           },
           "configurations": {
             "de": {
@@ -71,8 +73,6 @@
               "sourceMap": false,
               "localize": true,
               "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
