feat: update angular 18

--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -15,27 +15,27 @@
     "prebuild": "rimraf ./dist && mkdirp ./dist",
     "postbuild": "npm run deploy",
     "predeploy": "rimraf ../../../src/main/resources/static/*",
-    "deploy": "cpy 'base/*' dist/manager/ && cpy 'dist/manager/**' ../../../backend/src/main/resources/static/",
+    "deploy": "cpy 'base/*' dist/manager/browser/ && cpy 'dist/manager/browser/**' ../../../backend/src/main/resources/static/",
     "prettier": "npx prettier --write 'src/**/*.{ts,html,scss,json}'",
     "extract-i18n": "ng extract-i18n --format=json"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.0",
-    "@angular/cdk": "^17.0.0",
+    "@angular/cdk": "^18.0.0",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
     "@angular/forms": "^18.0.0",
     "@angular/localize": "^18.0.0",
-    "@angular/material": "^17.0.0",
-    "@angular/material-luxon-adapter": "^17.0.0",
+    "@angular/material": "^18.0.0",
+    "@angular/material-luxon-adapter": "^18.0.0",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "luxon": "^3.2.1",
     "material-icons": "^1.11.11",
-    "ngx-simple-charts": "^17.0.0",
+    "ngx-simple-charts": "^18.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.14.2"
