--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.10.0'
 	implementation 'com.google.crypto.tink:tink:1.11.0'
 	implementation 'com.rometools:rome:2.1.0'
+	implementation 'org.apache.httpcomponents.client5:httpclient5'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
