fix: health status

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -57,6 +57,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 management.health.livenessstate.enabled=true
 management.health.readinessstate.enabled=true
 management.health.mongo.enabled=true
+management.health.mail.enabled=false
 management.health.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.health.status.http-mapping.down=500
