--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -45,11 +45,11 @@
     "@angular/cli": "^18.0.1",
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
-    "@angular-eslint/builder": "^18.0.0-alpha.1",
-    "@angular-eslint/eslint-plugin": "^18.0.0-alpha.1",
-    "@angular-eslint/eslint-plugin-template": "^18.0.0-alpha.1",
-    "@angular-eslint/schematics": "^18.0.0-alpha.1",
-    "@angular-eslint/template-parser": "^18.0.0-alpha.1",
+    "@angular-eslint/builder": "^18.0.0",
+    "@angular-eslint/eslint-plugin": "^18.0.0",
+    "@angular-eslint/eslint-plugin-template": "^18.0.0",
+    "@angular-eslint/schematics": "^18.0.0",
+    "@angular-eslint/template-parser": "^18.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/luxon": "^2.0.0",
@@ -72,7 +72,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "protractor": "~7.0.0",
-    "rimraf": "^3.0.2",
+    "rimraf": "^4.0.2",
     "ts-node": "~10.4.0",
     "typescript": "~5.4.5",
     "webpack-bundle-analyzer": "^4.5.0"
