--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -35,7 +35,7 @@
     "@angular/router": "^18.0.0",
     "luxon": "^3.2.1",
     "material-icons": "^1.11.11",
-    "ngx-simple-charts": "^18.0.0",
+    "ngx-simple-charts": "^19.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.14.2"
@@ -44,18 +44,11 @@
     "@angular-devkit/build-angular": "^18.2.0",
     "@angular/cli": "^18.0.1",
     "@angular/compiler-cli": "^18.0.0",
-    "@angular/language-service": "^18.0.0",
-    "@angular-eslint/builder": "^18.0.0",
-    "@angular-eslint/eslint-plugin": "^18.0.0",
-    "@angular-eslint/eslint-plugin-template": "^18.0.0",
-    "@angular-eslint/schematics": "^18.0.0",
-    "@angular-eslint/template-parser": "^18.0.0",
+    "@angular/language-service": "^18.0.0",    
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/luxon": "^2.0.0",
-    "@types/node": "^14.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@types/node": "^18.0.0",    
     "cpy-cli": "^4.2.0",
     "eslint": "^8.0.0",
     "eslint-plugin-import": "^2.29.0",
@@ -70,11 +63,18 @@
     "karma-junit-reporter": "~2.0.0",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.0",
+    "prettier": "^3.3.3",
     "protractor": "~7.0.0",
     "rimraf": "^4.0.2",
     "ts-node": "~10.4.0",
     "typescript": "~5.4.5",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "webpack-bundle-analyzer": "^4.5.0",
+	"@angular-eslint/builder": "^19.0.0-alpha.1",
+	"@angular-eslint/eslint-plugin": "^19.0.0-alpha.1",
+	"@angular-eslint/eslint-plugin-template": "^19.0.0-alpha.1",
+	"@angular-eslint/schematics": "^19.0.0-alpha.1",
+	"@angular-eslint/template-parser": "^19.0.0-alpha.1",
+	"@typescript-eslint/eslint-plugin": "^8.15.0",
+	"@typescript-eslint/parser": "^8.15.0"
   }
 }
