--- a/frontend/src/angular/angular.json
+++ b/frontend/src/angular/angular.json
@@ -31,7 +31,8 @@
             },
             "index": "src/index.html",
             "polyfills": [
-              "src/polyfills.ts"
+              "src/polyfills.ts",
+              "@angular/localize/init"
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
