feat: transactional outbox

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -42,6 +42,9 @@ spring.h2.console.settings.web-allow-others=false
 spring.liquibase.change-log=classpath:/dbchangelog/db.changelog-master.xml
 #spring.liquibase.paramteters.liquibase.duplicateFileMode=WARN
 
+spring.modulith.events.jdbc-schema-initialization.enabled: true
+spring.modulith.republish-outstanding-events-on-restart: true
+
 //Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
