fix: gradle update

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -18,7 +18,12 @@ plugins {
 
 group = 'ch.xxx'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '21'
+
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
+}
 
 repositories {
 	mavenCentral()
