--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -27,7 +27,7 @@ task cleanAngular {
 
 task buildAngular {
 	if(project.hasProperty('withAngular')) {		
-		exec {
+		providers.exec {
 			logger.info('Task buildAngular - npm install')		
 			workingDir 'src/angular'
 			if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")){
@@ -36,7 +36,7 @@ task buildAngular {
 				commandLine('npm', 'install')
 			}
 		}
-		exec {
+		providers.exec {
 			logger.info('Task buildAngular - npm run build')
 			workingDir 'src/angular'
 			if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")){
@@ -50,7 +50,7 @@ task buildAngular {
 
 task testAngular {
 	if(project.hasProperty('withAngular')) {		
-		exec {
+		providers.exec {
 			workingDir 'src/angular'
 			if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")){
 				logger.info('Task buildAngular - npm run test')		
