--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -61,8 +61,7 @@ jobs:
 
     - if: matrix.language == 'java' 
       name: Build Java
-      run: |
-        gradlew build -PwithAngular=true 
+      run: ./gradlew build -PwithAngular=true 
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
