--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,9 @@
         {
             "type": "jdk",
             "request": "launch",
-            "name": "Launch Java App"
+            "name": "Launch Java App",
+            "mainClass": "ch.xxx.manager.ManagerApplication",
+            "vmArgs": " -Dspring.profiles.active=prod"        
         },
         {
             "name": "Launch Java: Continuous Mode",
