--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,6 +29,10 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+    set('springModulithVersion', "2.0.0-RC1")
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -39,9 +43,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 	implementation 'org.springframework.kafka:spring-kafka'
-	implementation 'org.springframework.modulith:spring-modulith-starter-jpa:1.4.2'
+	implementation 'org.springframework.modulith:spring-modulith-starter-jpa:2.0.0-RC1'
     implementation 'com.google.guava:guava:33.5.0-jre'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0-RC1'
 	implementation 'commons-net:commons-net:3.12.0'
@@ -63,6 +68,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-mail-test'
+    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
 	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
@@ -73,6 +79,12 @@ dependencies {
 		runtimeOnly 'com.h2database:h2'
 		testImplementation 'com.h2database:h2'
 	}
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
+    }
 }
 
 bootJar {
