--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -35,7 +35,7 @@
     "@angular/router": "^20.0.0",
     "luxon": "^3.2.1",
     "material-icons": "^1.11.11",
-    "ngx-simple-charts": "^20.0.0",
+    "ngx-simple-charts": "^21.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.15.0"
@@ -69,12 +69,12 @@
     "ts-node": "~10.4.0",
     "typescript": "~5.8.3",
     "webpack-bundle-analyzer": "^4.5.0",
-    "@angular-eslint/builder": "^20.0.0-alpha.1",
-    "@angular-eslint/eslint-plugin": "^20.0.0-alpha.1",
-    "@angular-eslint/eslint-plugin-template": "^20.0.0-alpha.1",
-    "@angular-eslint/schematics": "^20.0.0-alpha.1",
-    "@angular-eslint/template-parser": "^20.0.0-alpha.1",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0"
+    "@angular-eslint/builder": "^21.0.0",
+    "@angular-eslint/eslint-plugin": "^21.0.0",
+    "@angular-eslint/eslint-plugin-template": "^21.0.0",
+    "@angular-eslint/schematics": "^21.0.0",
+    "@angular-eslint/template-parser": "^21.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1"
   }
 }
