--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 	implementation 'org.springframework.kafka:spring-kafka'
-	implementation 'org.springframework.modulith:spring-modulith-starter-jpa:2.0.0-RC1'
+    implementation 'org.springframework.modulith:spring-modulith-events-api'
+    implementation 'org.springframework.modulith:spring-modulith-starter-core'
+    implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
     implementation 'com.google.guava:guava:33.5.0-jre'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0-RC1'
 	implementation 'commons-net:commons-net:3.12.0'
@@ -60,6 +62,9 @@ dependencies {
 	implementation 'com.google.crypto.tink:tink:1.19.0'
 	implementation 'com.rometools:rome:2.1.0'
 	implementation 'org.apache.httpcomponents.client5:httpclient5'
+    runtimeOnly 'org.springframework.modulith:spring-modulith-actuator'
+    runtimeOnly 'org.springframework.modulith:spring-modulith-events-kafka'
+    runtimeOnly 'org.springframework.modulith:spring-modulith-observability'
     testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-kafka-test'
