--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -50,15 +50,15 @@ dependencies {
     implementation 'org.springframework.modulith:spring-modulith-starter-core'
     implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
     implementation 'com.google.guava:guava:33.5.0-jre'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0-RC1'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'
 	implementation 'commons-net:commons-net:3.12.0'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'tools.jackson.dataformat:jackson-dataformat-xml'
 	implementation 'tools.jackson.dataformat:jackson-dataformat-csv'
-	implementation 'net.javacrumbs.shedlock:shedlock-spring:6.0.1'
-	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:6.0.1'
+	implementation 'net.javacrumbs.shedlock:shedlock-spring:7.3.0'
+	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:7.3.0'
 	implementation 'com.google.crypto.tink:tink:1.19.0'
 	implementation 'com.rometools:rome:2.1.0'
 	implementation 'org.apache.httpcomponents.client5:httpclient5'
